<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".TimingActivity">

    <EditText
        android:id="@+id/ptxtMaghrib"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ptxtDuha"
        android:layout_alignTop="@+id/txtMaghrib"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strMaghrib"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ptxtIsha"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strIsha"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ptxtFajr"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strFajr"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtDuhr"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtFajr"
        android:layout_marginTop="310dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/txtFajr"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ptxtFajr"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="74dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/txtAsr"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtDuhr"
        android:layout_marginBottom="210dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/txtMaghrib"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtDuhr"
        android:layout_marginBottom="120dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/txtIsha"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/txtDuhr"
        android:layout_alignTop="@+id/ptxtIsha"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/txtDuha"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/txtDuhr"
        android:layout_alignTop="@+id/ptxtDuha"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/ptxtDuha"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ptxtFajr"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strDuha"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ptxtAsr"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ptxtDuha"
        android:layout_alignTop="@+id/txtAsr"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strAsr"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ptxtDuhr"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ptxtMaghrib"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strDhuhr"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/headerNamaz"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/strNamaz"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>